# defensive_file_scanner

./: .gitignore  .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
Reference/: index.html
defensive_file_scanner/: __main__.py  create_file.py  main.py  scan.py
docs/: Reference.md  index.md  the_readme.md
docs/static/: custom.css
search/: search_index.json
static/: custom.css
testing/: boated_file_end  file.out
tests/: __init__.py  main_test.py
the_readme/: index.html
