[tool.poetry]
name = "defensive-file-scanner"
version = "0.1.0"
description = "Scan file for NOP bits."
authors = ["Zack Hankin <zthankin@gmail.com>"]
readme = "README.md"
packages = [{ include = "defensive_file_scanner" }]

[tool.poetry.dependencies]
python = "^3.9"
icecream = "^2.1.3"
loguru = "^0.6.0"
tqdm = "^4.65.0"
click = "^8.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
