[tool.poetry]
name = "defensive-file-scanner"
version = "0.1.0"
description = "Scan file for NOP bits."
authors = ["Zack Hankin <zthankin@gmail.com>"]
readme = "README.md"
packages = [{ include = "defensive_file_scanner" }]

[tool.poetry.dependencies]
python = "^3.9"
icecream = "^2.1.3"
loguru = "^0.6.0"
tqdm = "^4.65.0"
click = "^8.1.3"

# Documentation install
mkdocs = { version = "^1.4.2", optional = true }
mkdocs-autorefs = { version = "^0.4.1", optional = true }
mkdocs-git-revision-date-localized-plugin = { version = "^1.2.0", optional = true }
mkdocs-material = { version = "^9.1.2", optional = true }
mkdocstrings = { version = "^0.20.0", optional = true }
mkdocstrings-python = { version = "^0.8.3", optional = true }
pymdown-extensions = { version = "^9.10", optional = true }
mike = { version = "^1.1.2", optional = true }
pytest = "^7.2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
flake8 = "^6.0.0"
black = "^23.1.0"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
docs = ['mkdocs', 'mkdocs-autorefs', 'mkdocs-git-revision-date-localized-plugin', 'mkdocs-material', 'mkdocstrings', 'mkdocstrings-python', 'pymdown-extensions', 'mike']

[tool.poetry.scripts]
scan = "defensive_file_scanner.scan:main"
create_file = "defensive_file_scanner.create_file:main"

[tool.mypy]
mypy_path = '$MYPY_CONFIG_FILE_DIR'
files = '$MYPY_CONFIG_FILE_DIR/defensive_file_scanner'
explicit_package_bases = false
ignore_missing_imports = true
exclude = [
    "docs/",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
